--- a/css/layout.css
+++ b/css/layout.css
@@ -1,3 +1,18 @@
-p id ="description" {
-    
+*{
+    display: inline-block;
+}
+ 
+div{
+    width: 500px;
+    height: 600px;
+float: left;
+} 
+
+
+img{
+
+width: 500px;
+height: 500px;
+float: left;
+
 }
